<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/_item_type_divider"
        android:background="#FF536DFE"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"/>




    <com.daimajia.swipe.SwipeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/_swipe">
        <!-- Bottom View Start-->
        <LinearLayout
            android:background="#000000"
            android:id="@+id/bottom_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:contentDescription="@string/trash"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_trash"
                android:id="@+id/_delete"
                android:layout_weight="1"
                android:layout_gravity="center_vertical|center_horizontal"
                android:tint="#ffffffff"
                />

        </LinearLayout>
        <!-- Bottom View End-->

        <!-- Surface View Start -->
        <LinearLayout
            android:padding="10dp"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/_name"
                android:layout_gravity="start|center_vertical"/>


        </LinearLayout>
        <!-- Surface View End -->
    </com.daimajia.swipe.SwipeLayout>
</LinearLayout>