<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">


        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:padding="8dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:contentDescription="@string/back"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:srcCompat="@drawable/ic_back"
                    android:id="@+id/imageView2"
                    android:layout_gravity="center_vertical"
                    android:tint="#ffffff"
                    android:onClick="_back_onClick"
                    tools:ignore="VectorDrawableCompat" />

                <include layout="@layout/logo"/>

                <TextView
                    android:text="@string/select_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/_list_name"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    android:fontFamily="sans-serif"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>


            </LinearLayout>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/_item_name"
                android:layout_weight="1"
                android:textSize="30sp"
                android:textAlignment="center" />
        </LinearLayout>

        <GridView
            android:numColumns="2"
            android:layout_height="match_parent"
            android:id="@+id/_itemTypeView"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
