...



            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/_checkBox"
                android:layout_gravity="start|center_vertical"/>

            <Space
                android:layout_width="2000dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
...
